[package]
name = "ruuvi"
version = "0.5.0"
edition = "2021"

[dependencies]
bluer = { version = "0.16.1", features = ["bluetoothd"] }
futures = "0.3"
chrono = "0.4.31"
macaddr = { version = "1.0", features = ["serde_std"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.14", features = ["macros", "rt"] }
uuid = "1.3"
